# src/routes/index.js
@@ -10,6 +10,7 @@ const collectionRoutes = require('./collection');
 const customerRoutes = require('./customer');
 const merchantRoutes = require('./merchant');
 const couponRoutes = require('./coupon');
+const productRoutes = require('./product');
 
 router.use('/api/v1/auth', authRoutes);
 router.use('/api/v1/superadmin', validateToken, superAdminRoutes);
@@ -21,5 +22,6 @@ router.use('/api/v1/collections', validateToken, collectionRoutes);
 router.use('/api/v1/customers', validateToken, customerRoutes);
 router.use('/api/v1/merchants', validateToken, merchantRoutes);
 router.use('/api/v1/coupons', validateToken, couponRoutes);
+router.use('/api/v1/products', productRoutes);
 
 module.exports = router;
